SCIP version 2.1.2
==================

fixed bugs:
- fixed bug in SCIPsolveKnapsackExactly()
- fixed bug in varAddTransitiveImplic() in var.c, when adding implications on special aggregated, namely negated,
  variables
- fixed bug in cons_quadratic where bounds on activity of quadratic term were not always invalidated when quadratic
  variables were removed
- fixed bug in heur_undercover.c, where a variable with fixed bounds but not of status SCIP_VARSTATUS_FIXED was wrongly
  handled
- fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol
  process instead of the initpre process, this was to late because you might change the status in presolving which lead
  to an assert()

performance improvements:
- fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
  to exponential growth in running time

SCIP version 2.1.1
==================

performance improvements:
- revised pseudo objective propagator
- improve SCIPintervalSolveBivariateQuadExpressionAllScalar for ax=0 case if x has 0 in the interval for the linear coef.
- better domain propagation for quadratic constraints that consist of "non-overlapping" bilinear terms only
- ensure that a fixing of a variable in an abspower constraint is propagated to a fixing of the other variable

features:
- the pseudo objective propagator can be forced to propagate if active pricers are present; this can be done
  if for all (known or unknown) variables follows that: they have positive (negative) objective coefficient
  and the global lower (upper) bound is zero.

fixed bugs:
- fixed bug in reader_mps.c: INTEND marker is now also written, if COLUMNS section ends with non-continous variables
- fixed numeric issue in aggregations
- fixed pseudo cost computation
- pseudo objective propagator does not propagate it active pricers are present