@@ -3,6 +3,7 @@ SCIP version 2.1.2
 
 fixed bugs:
 - fixed bug in SCIPsolveKnapsackExactly()
+<<<<<<< HEAD
 - fixed bug in varAddTransitiveImplic() in var.c, when adding implications on special aggregated, namely negated,
   variables
 - fixed bug in cons_quadratic where bounds on activity of quadratic term were not always invalidated when quadratic
@@ -12,6 +13,7 @@ fixed bugs:
 - fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol
   process instead of the initpre process, this was to late because you might change the status in presolving which lead
   to an assert()
+- fixed issue if a primal solution leads to a cutoff of the current focus node
 
 performance improvements:
 - fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
